# tep-studio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py  wsgi.py
.github/workflows/: docs.yml  wheels.yml
docs/: agent.md  architecture.md  comparison.md  concepts.md  control.md  cookbook.md  data.md  development.md  first-simulation.md  getting-started.md  gymnasium.md  history.md  index.md  optimization.md  troubleshooting.md  ui.md  user-guide.md  validation.md
docs/reference/: api.md  schema.md
docs/stylesheets/: extra.css
src/tep_studio/: __init__.py  analysis.py  cli.py
src/tep_studio/agent/: __init__.py  chat.py  mcp_server.py  tools.py
src/tep_studio/agent/tests/: test_chat.py  test_mcp_server.py
src/tep_studio/control/: __init__.py  config.py  controller.py  experiment.py  figures.py  loops.py  metrics.py  pi.py  registry.py  runner.py  tuning.py  views.py
src/tep_studio/control/examples/: __init__.py  custom_controller.py  disturbance_scenario.py  mv_step_test.py  ricker_mode1_closed_loop.py
src/tep_studio/control/tests/: __init__.py  test_closed_loop.py  test_disturbances.py  test_overrides.py  test_pi.py  test_registry.py  test_setpoint_schedule.py  test_views_and_records.py
src/tep_studio/simulation/: __init__.py  _cffi_build.py  benchmark.py  core.py  dataset.py  excitation.py  gym_env.py  modes.py  native.py  optimization.py  rl.py  schema.py
src/tep_studio/simulation/examples/: __init__.py  r12_open_loop.py  rl_training.py
src/tep_studio/simulation/tests/: __init__.py  test_benchmark.py  test_excitation.py  test_gym_env_ext.py  test_integrators.py  test_linearize.py  test_modes.py  test_rl_ext.py  test_tep_studio.py  test_validation.py
src/tep_studio/simulation/validation/: __init__.py  __main__.py  artifacts.py  base_case.py  cli.py  figures.py  mat_states.py  metrics.py  references.py  report.py  runner.py  scenarios.py  steady_state.py
src/tep_studio/tests/: test_cli.py  test_package_api.py
src/tep_studio/ui/: __init__.py  __main__.py  about_content.py  app.py  callbacks.py  chat_panel.py  config.py  figures.py  layout.py  results.py  service.py  store.py  theme.py  widgets.py
src/tep_studio/ui/tests/: __init__.py  test_app_smoke.py  test_chat_panel.py  test_config_roundtrip.py  test_figures.py  test_results_store.py  test_service.py
temexd_mod/: README.md
web/: index.html
